--- a/assets/style.css
+++ b/assets/style.css
@@ -24,9 +24,22 @@ nav a {
     text-decoration: none;
     text-align: center;
 }
+.container {
+    padding-left: 20px;
+    display: flex; 
+    justify-content: space-around;
+}
+.box {
+    width: 200px; 
+    height: 100px; 
+    border: solid black; 
+    box-shadow: 10px 10px 5px blue;
+    text-align: center;
+    padding-top: 80px; 
+}
 body {
     border: solid black; 
-    height: 1000px; 
+    height: 1200px; 
     background-color: lightblue;
     color: black; 
     font-size: 18px;
