--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ nav {
     height: 40px;
     display: flex;
     justify-content: space-around;
+
 }
 
 nav a {
@@ -24,11 +25,13 @@ nav a {
     padding: 14px 20px;
     text-decoration: none;
     text-align: center;
+    font-size: 20px;
 }
 .container {
-    padding-left: 20px;
+    padding: 20px;
     display: flex; 
     justify-content: space-around;
+    flex-wrap: wrap; 
 }
 .box {
     width: 200px; 
@@ -37,12 +40,22 @@ nav a {
     box-shadow: 10px 10px 5px blue;
     text-align: center;
     padding-top: 80px; 
+    margin: 20px; 
 }
 body {
     border: solid black; 
-    height: 1500px; 
+    height: auto; 
     background-color: lightblue;
     color: black; 
     font-size: 18px;
-
 }
+@media only screen and (max-width: 600px) {
+    .headertext {
+        font-size: 15px;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    nav a {
+        font-size: 10px;
+    }
+  }
