--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ header {
     text-align: center;
     padding-top: 30px; 
     font-size: 30px;
+    color: white; 
 }
 nav {
     background-color: navy; 
@@ -33,20 +34,23 @@ nav a {
     justify-content: space-around;
     flex-wrap: wrap; 
 }
+a {
+    color: white
+}
 .box {
     width: 200px; 
     height: 100px; 
-    border: solid black; 
+    border: solid white; 
     box-shadow: 10px 10px 5px blue;
     text-align: center;
     padding-top: 80px; 
     margin: 20px; 
 }
 body {
-    border: solid black; 
+    border: solid white; 
     height: auto; 
-    background-color: lightblue;
-    color: black; 
+    background-color: black;
+    color:white; 
     font-size: 18px;
 }
 @media only screen and (max-width: 600px) {
